--- a/server/package.json
+++ b/server/package.json
@@ -15,6 +15,7 @@
     "body-parser": "^1.20.2",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "openai": "^4.24.1"
+    "openai": "^4.24.1",
+    "tsx": "^4.7.0"
   }
 }
