--- a/server/package.json
+++ b/server/package.json
@@ -11,11 +11,17 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@reach/router": "^1.3.4",
     "axios": "^1.6.3",
     "body-parser": "^1.20.2",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "node-fetch": "^3.3.2",
     "openai": "^4.24.1",
-    "tsx": "^4.7.0"
+    "tsx": "^4.7.0",
+    "unsplash-js": "^7.0.19"
+  },
+  "devDependencies": {
+    "typescript": "^5.3.3"
   }
 }
